--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "rebass": "^4.0.7",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
-    "sweetalert2": "^11.4.14",
+    "spinners-react": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
